--- a/TravelExpertsMVC/Views/Shared/_LoginPartial.cshtml
+++ b/TravelExpertsMVC/Views/Shared/_LoginPartial.cshtml
@@ -5,6 +5,11 @@
             <a class="nav-link text-dark" asp-action="/Home/Index" title="Welcome">
                 Welcome @User.Identity.Name
             </a>
+        </li> 
+        <li class="nav-item">
+            <a class="nav-link text-dark" asp-controller="Customer" asp-action="Profile" title="Welcome">
+                Profile
+            </a>
         </li>
         <li class="nav-item">
             <form class="form-inline" asp-controller="Account" asp-action="Logout"
