--- a/TravelExpertsMVC/Views/Account/Register.cshtml
+++ b/TravelExpertsMVC/Views/Account/Register.cshtml
@@ -4,11 +4,10 @@
     ViewData["Title"] = "Register";
 }
 
-<h1>Register</h1>
+<h1 class="text-center display-5">Register</h1>
 
-<h4>Customer</h4>
 <hr />
-<div class="row">
+<div class="row justify-content-center align-items-center">
     <div class="col-md-4">
         <form asp-action="Register">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
@@ -17,62 +16,62 @@
                 <input asp-for="CustomerId" class="form-control" />
                 <span asp-validation-for="CustomerId" class="text-danger"></span>
             </div> *@
-            <div class="form-group">
+            <div class="form-group mb-3">
                 <label asp-for="Username" class="control-label"></label>
                 <input asp-for="Username" class="form-control" />
                 <span asp-validation-for="Username" class="text-danger"></span>
             </div>
-            <div class="form-group">
+            <div class="form-group mb-3">
                 <label asp-for="Password" class="control-label"></label>
                 <input asp-for="Password" class="form-control" />
                 <span asp-validation-for="Password" class="text-danger"></span>
             </div>
-            <div class="form-group">
+            <div class="form-group mb-3">
                 <label asp-for="CustFirstName" class="control-label"></label>
                 <input asp-for="CustFirstName" class="form-control" />
                 <span asp-validation-for="CustFirstName" class="text-danger"></span>
             </div>
-            <div class="form-group">
+            <div class="form-group mb-3">
                 <label asp-for="CustLastName" class="control-label"></label>
                 <input asp-for="CustLastName" class="form-control" />
                 <span asp-validation-for="CustLastName" class="text-danger"></span>
             </div>
-            <div class="form-group">
+            <div class="form-group mb-3">
                 <label asp-for="CustAddress" class="control-label"></label>
                 <input asp-for="CustAddress" class="form-control" />
                 <span asp-validation-for="CustAddress" class="text-danger"></span>
             </div>
-            <div class="form-group">
+            <div class="form-group mb-3">
                 <label asp-for="CustCity" class="control-label"></label>
                 <input asp-for="CustCity" class="form-control" />
                 <span asp-validation-for="CustCity" class="text-danger"></span>
             </div>
-            <div class="form-group">
+            <div class="form-group mb-3">
                 <label asp-for="CustProv" class="control-label"></label>
                 <input asp-for="CustProv" class="form-control" />
                 <span asp-validation-for="CustProv" class="text-danger"></span>
             </div>
-            <div class="form-group">
+            <div class="form-group mb-3">
                 <label asp-for="CustPostal" class="control-label"></label>
                 <input asp-for="CustPostal" class="form-control" />
                 <span asp-validation-for="CustPostal" class="text-danger"></span>
             </div>
-            <div class="form-group">
+            <div class="form-group mb-3">
                 <label asp-for="CustCountry" class="control-label"></label>
                 <input asp-for="CustCountry" class="form-control" />
                 <span asp-validation-for="CustCountry" class="text-danger"></span>
             </div>
-            <div class="form-group">
+            <div class="form-group mb-3">
                 <label asp-for="CustHomePhone" class="control-label"></label>
                 <input asp-for="CustHomePhone" class="form-control" />
                 <span asp-validation-for="CustHomePhone" class="text-danger"></span>
             </div>
-            <div class="form-group">
+            <div class="form-group mb-3">
                 <label asp-for="CustBusPhone" class="control-label"></label>
                 <input asp-for="CustBusPhone" class="form-control" />
                 <span asp-validation-for="CustBusPhone" class="text-danger"></span>
             </div>
-            <div class="form-group">
+            <div class="form-group mb-3">
                 <label asp-for="CustEmail" class="control-label"></label>
                 <input asp-for="CustEmail" class="form-control" />
                 <span asp-validation-for="CustEmail" class="text-danger"></span>
@@ -83,10 +82,6 @@
             </div>
         </form>
     </div>
-</div>
-
-<div>
-    <a asp-controller="Home" asp-action="Index">Back to Home</a>
 </div>
 
 @section Scripts {
