--- a/TravelExpertsMVC/Views/Customer/Profile.cshtml
+++ b/TravelExpertsMVC/Views/Customer/Profile.cshtml
@@ -7,7 +7,7 @@
     <div class="text-center">
 	<h1 class="text-capitalize mt-5">@Model.Username</h1>
 	<div class="my-4 profile-edit fs-5">
-		@Html.ActionLink("Edit", "Edit", new { id = Model.CustomerId })
+        <i class="fa-solid fa-gear"></i> @Html.ActionLink("Edit", "Edit", new { id = Model.CustomerId })
 	</div>
 
     <hr/>
