--- a/TravelExpertsMVC/Views/Shared/_LoginPartial.cshtml
+++ b/TravelExpertsMVC/Views/Shared/_LoginPartial.cshtml
@@ -2,7 +2,7 @@
     @if (User.Identity.IsAuthenticated)
     {
         <li class="nav-item">
-            <a class="nav-link text-dark" asp-action="/Home/Index" title="Welcome">
+            <a class="nav-link text-dark" asp-controller="Home" asp-action="Index" title="Welcome">
                 Welcome @User.Identity.Name
             </a>
         </li> 
