--- a/TravelExpertsMVC/wwwroot/css/site.css
+++ b/TravelExpertsMVC/wwwroot/css/site.css
@@ -7,6 +7,11 @@ html {
     font-size: 16px;
   }
 }
+.kaushan-script-regular {
+    font-family: "Kaushan Script", cursive;
+    font-weight: 400;
+    font-style: normal;
+}
 
 .btn:focus, .btn:active:focus, .btn-link.nav-link:focus, .form-control:focus, .form-check-input:focus {
   box-shadow: 0 0 0 0.1rem white, 0 0 0 0.25rem #258cfb;
@@ -20,6 +25,17 @@ html {
 body {
   margin-bottom: 60px;
 }
+
+.jumbo {
+    background-image: url('../images/splash.jpg');
+    background-size: cover;
+    background-repeat: no-repeat;
+    height: 30em;
+}
+.overlay {
+    background-color: rgba(0, 0, 0, 0.3); 
+}
+
 .profile-edit a{
     text-decoration: none;
     color: black;
@@ -27,3 +43,4 @@ body {
 .profile-edit a:hover{
     text-decoration: underline;
 }
+
