--- a/TravelExpertsMVC/Views/Home/Index.cshtml
+++ b/TravelExpertsMVC/Views/Home/Index.cshtml
@@ -6,9 +6,9 @@
     <div class="jumbo text-center my-5">
         <div class="overlay h-100">
             <div class="d-flex justify-content-center align-items-center h-100">
-                <div class="text-white">
-					<h1 class="mb-3">Travel Experts</h1>
-                    <h3 class="mb-3">See What we Have To offer</h3>
+                <div class="">
+                    <h1 class="mb-3 text-white">Welcome To Travel Experts</h1>
+                    <h3 class="mb-3 text-white">See What we Have To offer</h3>
                     <a class="btn btn-outline-light btn-lg" role="button">Check it out</a>
                 </div>
             </div>
