--- a/TravelExpertsMVC/Views/Shared/_Layout.cshtml
+++ b/TravelExpertsMVC/Views/Shared/_Layout.cshtml
@@ -29,9 +29,9 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="About">About</a>
                         </li>
-                        <li class="nav-item">
+@*                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Contact">Contact</a>
-                        </li>
+                        </li> *@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Contact" asp-action="AgentsByAgency">Contact</a>
                         </li>
