--- a/TravelExpertsMVC/wwwroot/css/site.css
+++ b/TravelExpertsMVC/wwwroot/css/site.css
@@ -7,10 +7,26 @@ html {
     font-size: 16px;
   }
 }
+.nav-bg {
+    background: #c0c0aa; 
+    background: -webkit-linear-gradient(to right, #1cefff, #c0c0aa); 
+    background: linear-gradient(to right, #1cefff, #c0c0aa); 
+}
 .kaushan-script-regular {
     font-family: "Kaushan Script", cursive;
     font-weight: 400;
     font-style: normal;
+}
+.active {
+    font-weight: bolder;
+    text-decoration: underline 0.2em;
+    text-underline-offset: 0.3em;
+    color: #f57242 !important;
+}
+.hover:hover {
+    font-weight: bolder;
+    text-decoration: underline 0.2em #f57242;
+    text-underline-offset: 0.3em;
 }
 
 .btn:focus, .btn:active:focus, .btn-link.nav-link:focus, .form-control:focus, .form-check-input:focus {
