--- a/TravelExpertsMVC/Views/Shared/_Layout.cshtml
+++ b/TravelExpertsMVC/Views/Shared/_Layout.cshtml
@@ -32,9 +32,9 @@
                             <a class="nav-link text-dark @(controller == "Home" && action == "Index" ? "active" : "")"  asp-controller="Home" asp-action="Index">Home</a>
                         </li>
                         <li class="nav-item hover">
-                            <a class="nav-link text-dark @(controller == "Home" && action == "About" ? "active" : "")"  asp-controller="Home" asp-action="About">Home</a>
+                            <a class="nav-link text-dark @(controller == "Home" && action == "About" ? "active" : "")"  asp-controller="Home" asp-action="About">About</a>
                         </li>
-                        <li class="nav-item">
+                        <li class="nav-item hover">
                             <a class="nav-link text-dark @(controller == "Contact" && action == "AgentsByAgency" ? "active" : "")" asp-controller="Contact" asp-action="AgentsByAgency">Contact</a>
                         </li>
                         @if (User.Identity.IsAuthenticated)
