Added Packages form

--- a/TravelExpertsMVC/Views/Shared/_Layout.cshtml
+++ b/TravelExpertsMVC/Views/Shared/_Layout.cshtml
@@ -33,6 +33,9 @@
                             <li class="nav-item">
                                 <a class="nav-link text-dark" asp-area="" asp-controller="TravelProduct" asp-action="Bookings">Bookings</a>
                             </li>
+                            <li class="nav-item">
+                                <a class="nav-link text-dark" asp-area="" asp-controller="TravelProduct" asp-action="BookPackage">Book Package</a>
+                            </li>
                         }
                     </ul>
                     <partial name="_LoginPartial" />
