--- a/TravelExpertsMVC/Views/Home/Index.cshtml
+++ b/TravelExpertsMVC/Views/Home/Index.cshtml
@@ -15,12 +15,8 @@
             </div>
         </div>
     </div>
+    <partial name="_HomePartial" />
 
-    @if (User.Identity.IsAuthenticated)
-    {
-        <form action="@Url.Action("Bookings", "TravelProduct")">
-            <button id="booking" type="submit" class="col-6 offset-3">Bookings</button>
-        </form>
-    }
+   
 
 </div>
