home page update

--- a/TravelExpertsMVC/Views/Shared/_HomePartial.cshtml
+++ b/TravelExpertsMVC/Views/Shared/_HomePartial.cshtml
@@ -8,6 +8,62 @@
 }
 else
 {
-    <h1>Register</h1>
+    <div class="row fw-medium">
+        <div class="col-md-6 col-sm-12">
+            <h2 class="text-start">Register</h2>
+            <p>The First Step To Your Adventure Begins Here Sign Up Now!</p>
+            <a class="btn btn-primary px-2 mb-3" asp-controller="Account" asp-action="Register">Register</a>
+        </div>
+        <div class="home-register-img col-md-6 col-sm-12">
+            <img src="~/images/takeoff.jpg" class="img-fluid" />
+        </div>
+    </div>
+
+    <section class="my-5">
+        <h2 class="text-center mb-5 protest-riot-regular">See What Some Of Our Traveleres Had to Say</h2>
+        <div class="row">
+            <div class="col-md-6 col-sm-12">
+                <div class="card">
+                    <div class="card-header">
+                        <span class="me-2 fw-bolder">We had the time of our lives</span>
+                        <span class="gold-stars">
+                            <i class="fa-solid fa-star"></i>
+                            <i class="fa-solid fa-star"></i>
+                            <i class="fa-solid fa-star"></i>
+                            <i class="fa-solid fa-star"></i>
+                            <i class="fa-solid fa-star"></i>
+                        </span>
+                    </div>
+                    <div class="card-body">
+                        <blockquote class="blockquote mb-0">
+                            <p>We will be only using travel experts for all our travels</p>
+                            <footer class="blockquote-footer">Travel Guys</footer>
+                        </blockquote>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-6 col-sm-12">
+                <div class="card">
+                    <div class="card-header">
+                        <span class="me-2 fw-bolder">Best Agency</span>
+                        <span class="gold-stars">
+                            <i class="fa-solid fa-star"></i>
+                            <i class="fa-solid fa-star"></i>
+                            <i class="fa-solid fa-star"></i>
+                            <i class="fa-solid fa-star"></i>
+                            <i class="fa-solid fa-star"></i>
+                        </span>
+                    </div>
+                    <div class="card-body">
+                        <blockquote class="blockquote mb-0">
+                            <p>We Barely had to do anything. Travel Experts did it for us!</p>
+                            <footer class="blockquote-footer">Travel Girls</footer>
+                        </blockquote>
+                    </div>
+                </div>
+            </div>
+        </div>
+        
+    </section>
 }
 
