--- a/TravelExpertsMVC/wwwroot/css/site.css
+++ b/TravelExpertsMVC/wwwroot/css/site.css
@@ -1,5 +1,6 @@
+
 html {
-  font-size: 14px;
+    font-size: 14px;
 }
 
 @media (min-width: 768px) {
@@ -28,7 +29,15 @@ html {
     text-decoration: underline 0.2em #f57242;
     text-underline-offset: 0.3em;
 }
+.protest-riot-regular {
+    font-family: "Protest Riot", sans-serif;
+    font-weight: 400;
+    font-style: normal;
+}
 
+.gold-stars {
+    color: #FFD700;
+}
 .btn:focus, .btn:active:focus, .btn-link.nav-link:focus, .form-control:focus, .form-check-input:focus {
   box-shadow: 0 0 0 0.1rem white, 0 0 0 0.25rem #258cfb;
 }
