Worked on about page

--- a/TravelExpertsMVC/Views/Home/About.cshtml
+++ b/TravelExpertsMVC/Views/Home/About.cshtml
@@ -2,4 +2,22 @@
 @{
     ViewData["Title"] = "About Us";
 }
+@section AboutUsStyles {
+    <link rel="stylesheet" href="~/css/MySpecificViewStyles.css" />
+}
 <h1>About</h1>
+<section class="hero">
+    <div clas"heading">
+        <h1>About Us</h1>
+        <div class="hero-content">
+        <h2>Welcome to Our Website</h2>
+        <p>Discover the lastest trends and innovations in technology, 
+            design and more. Our team of experts brings you the best 
+            content and insights to help you stay aheadof the curve</p>
+        <button class="cta-button">Learn More</button>
+        <div class="hero-image">
+            <img src="~/Images/travel-world.jpg" />
+        </div>
+        </div>
+    </div>
+</section>
