home page updates

--- a/TravelExpertsMVC/Views/Shared/_HomePartial.cshtml
+++ b/TravelExpertsMVC/Views/Shared/_HomePartial.cshtml
@@ -12,7 +12,8 @@ else
         <div class="col-md-6 col-sm-12">
             <h2 class="text-start">Register</h2>
             <p>The First Step To Your Adventure Begins Here Sign Up Now!</p>
-            <a class="btn btn-primary px-2 mb-3" asp-controller="Account" asp-action="Register">Register</a>
+            <a class="btn Buttons text-bg-light px-4 py-1 fw-medium mb-3" asp-controller="Account" asp-action="Register">Register</a>
+            <a class="btn Buttons text-bg-light px-4 py-1 fw-medium mb-3" asp-controller="Account" asp-action="Login">Sign in</a>
         </div>
         <div class="home-register-img col-md-6 col-sm-12">
             <img src="~/images/takeoff.jpg" class="img-fluid" />
@@ -24,7 +25,7 @@ else
         <div class="row">
             <div class="col-md-6 col-sm-12">
                 <div class="card">
-                    <div class="card-header">
+                    <div class="card-header nav-bg">
                         <span class="me-2 fw-bolder">We had the time of our lives</span>
                         <span class="gold-stars">
                             <i class="fa-solid fa-star"></i>
@@ -36,7 +37,7 @@ else
                     </div>
                     <div class="card-body">
                         <blockquote class="blockquote mb-0">
-                            <p>We will be only using travel experts for all our travels</p>
+                            <p>We'll only be using Travel Experts from now on</p>
                             <footer class="blockquote-footer">Travel Guys</footer>
                         </blockquote>
                     </div>
@@ -44,7 +45,7 @@ else
             </div>
             <div class="col-md-6 col-sm-12">
                 <div class="card">
-                    <div class="card-header">
+                    <div class="card-header nav-bg">
                         <span class="me-2 fw-bolder">Best Agency</span>
                         <span class="gold-stars">
                             <i class="fa-solid fa-star"></i>
