--- a/TravelExpertsMVC/wwwroot/css/site.css
+++ b/TravelExpertsMVC/wwwroot/css/site.css
@@ -29,6 +29,11 @@ html {
     text-decoration: underline 0.2em #f57242;
     text-underline-offset: 0.3em;
 }
+.Buttons {
+    background: #ffe259; /* fallback for old browsers */
+    background: -webkit-linear-gradient(to right, #ffa751, #ffe259); /* Chrome 10-25, Safari 5.1-6 */
+    background: linear-gradient(to right, #ffa751, #ffe259); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+}
 .protest-riot-regular {
     font-family: "Protest Riot", sans-serif;
     font-weight: 400;
