--- a/TravelExpertsMVC/Views/Shared/_LoginPartial.cshtml
+++ b/TravelExpertsMVC/Views/Shared/_LoginPartial.cshtml
@@ -1,9 +1,9 @@
 ﻿<ul class="navbar-nav ml-auto">
     @if (User.Identity.IsAuthenticated)
-    {
+    {var firstName = User.Claims.FirstOrDefault(c => c.Type == "FirstName")?.Value; 
         <li class="nav-item hover">
             <a class="nav-link text-dark" asp-controller="Home" asp-action="Index" title="Welcome">
-                Welcome @User.Identity.Name
+                Welcome @firstName
             </a>
         </li> 
         <li class="nav-item hover">
