--- a/TravelExpertsMVC/Views/Home/About.cshtml
+++ b/TravelExpertsMVC/Views/Home/About.cshtml
@@ -1,8 +1,8 @@
-﻿@section AboutUsStyles {
+﻿@* @section AboutUsStyles {
     <link rel="stylesheet" href="~/css/AboutUsStyles.css" asp-append-version="true" />
-}
+} *@
 <body>
-<section class="hero">
+<section class="">
     <div class="heading"></div>
         <h1>About Us</h1>
         <div class="container">
