home updates for logged in user

--- a/TravelExpertsMVC/Views/TravelProduct/BookPackage.cshtml
+++ b/TravelExpertsMVC/Views/TravelProduct/BookPackage.cshtml
@@ -38,7 +38,7 @@
                     </select>
                     <span asp-validation-for="TripTypeId" class="text-danger"></span>
                 </div>
-                <div class="form-group">
+                <div class="form-group mt-3">
                     <input type="submit" value="Book Package" class="btn btn-primary" />
                 </div>
             </form>
@@ -88,8 +88,5 @@
                 </tbody>
             </table>
         </div>
-    </div>
-    <div>
-        <a asp-action="Index">Back to List</a>
     </div>
 </div>
