--- a/TravelExpertsMVC/Views/Shared/_Layout.cshtml
+++ b/TravelExpertsMVC/Views/Shared/_Layout.cshtml
@@ -43,11 +43,16 @@
                         </li>
                         @if (User.Identity.IsAuthenticated)
                         {
-                            <li class="nav-item">
-                                <a class="nav-link text-dark" asp-area="" asp-controller="TravelProduct" asp-action="Bookings">Bookings</a>
+                            <li class="nav-item hover">
+                                <a class="nav-link text-dark" asp-controller="Customer" asp-action="Profile" title="Welcome">
+                                    Profile
+                                </a>
                             </li>
-                            <li class="nav-item">
-                                <a class="nav-link text-dark" asp-area="" asp-controller="TravelProduct" asp-action="BookPackage">Book Package</a>
+                            <li class="nav-item hover">
+                                <a class="nav-link text-dark @(controller == "TravelProduct" && action == "Bookings" ? "active" : "")" asp-controller="TravelProduct" asp-action="Bookings">Bookings</a>
+                            </li>
+                            <li class="nav-item hover">
+                                <a class="nav-link text-dark @(controller == "TravelProduct" && action == "BookPackage" ? "active" : "")" asp-controller="TravelProduct" asp-action="BookPackage">Book Package</a>
                             </li>
                         }
                     </ul>
