--- a/TravelExpertsMVC/Views/Shared/_LoginPartial.cshtml
+++ b/TravelExpertsMVC/Views/Shared/_LoginPartial.cshtml
@@ -2,15 +2,11 @@
     @if (User.Identity.IsAuthenticated)
     {
         <li class="nav-item hover">
-            <a class="nav-link text-dark" asp-controller="Home" asp-action="Index" title="Welcome">
-                Welcome @User.Identity.Name
+            <a class="nav-link text-dark text-capitalize" asp-controller="Customer" asp-action="Profile" title="Welcome">
+                @User.Identity.Name
             </a>
         </li> 
-        <li class="nav-item hover">
-            <a class="nav-link text-dark" asp-controller="Customer" asp-action="Profile" title="Welcome">
-                Profile
-            </a>
-        </li>
+        
         <li class="nav-item hover">
             <form class="form-inline" asp-controller="Account" asp-action="Logout"
                   asp-route-returnUrl=@Url.Action("Home", "Index")>
