--- a/TravelExpertsMVC/Views/Home/About.cshtml
+++ b/TravelExpertsMVC/Views/Home/About.cshtml
@@ -1,21 +1,17 @@
-﻿@* @section AboutUsStyles {
-    <link rel="stylesheet" href="~/css/AboutUsStyles.css" asp-append-version="true" />
-} *@
-<body>
-<section class="">
-    <div class="heading"></div>
-        <h1>About Us</h1>
-        <div class="container">
-            <div class="hero-content"
-        <h2>Welcome to Our Website</h2>
-        <p>Discover the lastest trends and innovations in technology, 
-            design and more. Our team of experts brings you the best 
-            content and insights to help you stay aheadof the curve</p>
-        <button class="cta-button">Learn More</button>
-        </div>
-        <div class="hero-image">
-            <img src="~/Images/travel-world.jpg" />
+﻿    <section class="my-5">
+        <h1 class="text-center protest-riot-regular mb-5">About Us</h1>
+        <div class="row fw-medium">
+            <div class="col-md-6 col-sm-12">
+                <h2>Welcome to Travel Experts</h2>
+                <p class="my-3">
+                    Discover the lastest trends and innovations in technology,
+                    design and more. Our team of experts brings you the best
+                    content and insights to help you stay ahead of the curve
+                </p>
+                <button class="btn-about mb-5">Learn More</button>
             </div>
-        </div>    
-</section>
-</body>
+            <div class="home-register-img col-md-6 col-sm-12">
+                <img src="~/Images/travel-world.jpg" class="img-fluid" />
+            </div>
+        </div>
+    </section>
