--- a/TravelExpertsMVC/Views/Shared/_HomePartial.cshtml
+++ b/TravelExpertsMVC/Views/Shared/_HomePartial.cshtml
@@ -19,16 +19,16 @@
             </div>
         </div>
         <div class="row fw-medium">
-            <div class="col-md-6 col-sm-12">
+            <div class="col-md-6 col-sm-12 mt-3">
                 <h2 class="text-start">European Vacation</h2>
                 <p>Or A Eurpoean Trip Of a LifeTime</p>
             </div>
             <div class="home-register-img col-md-6 col-sm-12">
-                <img src="~/images/eurpean-image.jpg" class="img-fluid"/>
+                <img src="~/images/european-image.jpg" class="img-fluid" />
             </div>
         </div>
-        <div class="text-center my-5">
-            <a class="btn Buttons text-bg-light px-4 py-1 fw-medium mb-3" asp-controller="TravelProduct" asp-action="BookPackage">Book Now!</a>
+        <div class="text-center">
+            <a class="btn Buttons text-bg-light px-4 py-1 fw-medium my-3" asp-controller="TravelProduct" asp-action="BookPackage">Book Now!</a>
         </div>
     </section>
 }
@@ -36,7 +36,7 @@ else
 {
     <div class="row fw-medium">
         <div class="col-md-6 col-sm-12">
-            <h2 class="text-start">Register</h2>
+            <h2 class="text-start">Register <i class="fa-solid fa-check"></i></h2>
             <p>The First Step To Your Adventure Begins Here Sign Up Now!</p>
             <a class="btn Buttons text-bg-light px-4 py-1 fw-medium mb-3" asp-controller="Account" asp-action="Register">Register</a>
             <a class="btn Buttons text-bg-light px-4 py-1 fw-medium mb-3" asp-controller="Account" asp-action="Login">Sign in</a>
