--- a/TravelExpertsMVC/Views/Shared/_Layout.cshtml
+++ b/TravelExpertsMVC/Views/Shared/_Layout.cshtml
@@ -69,7 +69,7 @@
 
     <footer class="border-top footer text-muted">
         <div class="container">
-            &copy; 2024 - TravelExpertsMVC - <a asp-area="" asp-controller="Contact" asp-action="AgentsByAgency">Contact</a>
+            &copy; 2024 - TravelExperts - <a asp-area="" asp-controller="Contact" asp-action="AgentsByAgency">Contact</a>
         </div>
     </footer>
     <script src="https://kit.fontawesome.com/5d36e2f921.js" crossorigin="anonymous"></script>
