--- a/TravelExpertsMVC/Views/Shared/_LoginPartial.cshtml
+++ b/TravelExpertsMVC/Views/Shared/_LoginPartial.cshtml
@@ -3,7 +3,7 @@
     {var firstName = User.Claims.FirstOrDefault(c => c.Type == "FirstName")?.Value; 
         <li class="nav-item hover">
             <a class="nav-link text-dark" asp-controller="Home" asp-action="Index" title="Welcome">
-                Welcome @firstName
+                Hey! @firstName
             </a>
         </li> 
         
