--- a/TravelExpertsMVC/wwwroot/css/site.css
+++ b/TravelExpertsMVC/wwwroot/css/site.css
@@ -74,4 +74,21 @@ body {
 .profile-edit a:hover{
     text-decoration: underline;
 }
+.btn-about {
+    display: inline-block;
+    background-color: #ff4500;
+    color: #fff;
+    padding: 12px 24px;
+    border-radius: 5px;
+    font-size: 20px;
+    border: none;
+    cursor: pointer;
+    transition: 0.3s ease;
+}
+
+.btn-about:hover {
+    background-color: #ff6347;
+    transform: scale(1.1);
+}
+    
 
