--- a/TravelExpertsMVC/Views/Account/Login.cshtml
+++ b/TravelExpertsMVC/Views/Account/Login.cshtml
@@ -8,11 +8,18 @@
           <div class="mb-3">
             <label class="form-label">Username: </label>
             <input type="text" asp-for="Username" class="form-control"/>
+            <span asp-validation-for="Username" class="text-danger"></span>
           </div>
           <div class="mb-3">
             <label class="form-label">Password: </label>
             <input type="text" asp-for="Password" class="form-control" />
+            <span asp-validation-for="Password" class="text-danger"></span>
           </div>
-          <input type="submit" value="Authenticate" class="btn btn-primary" />
+        <input type="submit" value="Login" class="btn btn-primary" />
     </form>
 </div>
+@section Scripts {
+    @{
+        await Html.RenderPartialAsync("_ValidationScriptsPartial");
+    }
+}
