--- a/TravelExpertsMVC/Views/TravelProduct/BookPackage.cshtml
+++ b/TravelExpertsMVC/Views/TravelProduct/BookPackage.cshtml
@@ -20,7 +20,7 @@
                     <span asp-validation-for="PackageId" class="text-danger"></span>
                 </div>
                 <div class="form-group">
-                    <label asp-for="TravelerCount" class="control-label">Amount of Traveller</label>
+                    <label asp-for="TravelerCount" class="control-label">Number of Travellers</label>
                     <select asp-for="TravelerCount" class="form-control">
                         @for (int i = 1; i <= 12; i++)
                         {
