--- a/TravelExpertsMVC/Views/TravelProduct/Bookings.cshtml
+++ b/TravelExpertsMVC/Views/TravelProduct/Bookings.cshtml
@@ -12,22 +12,25 @@
     <thead>
         <tr>
             <th>
-                @Html.DisplayNameFor(model => model.BookingNo)
+                Booking No @*BookingNo*@
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.TravelerCount)
+                Number of Travelers @*TravelerCount*@
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.TripTypeId)
+                Trip Type @*TripTypeId*@
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.BookingDate)
+                Booking Date @*BookingDate*@
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.PackageId)
+                Package @*PackageId displayed as Package Name*@
             </th>
             <th>
-                Details
+                Details @*Detail Button*@
+            </th>
+            <th>
+                Remove Booking @*Remove Booking button*@
             </th>
         </tr>
     </thead>
@@ -85,14 +88,19 @@
                         }
                     }
                     
-
                 </td>
-                <td>
+                <td> <!--Button needs hoverable-->
                     <form action="@Url.Action("Details", "TravelProduct")" method="post">
                         <input type="hidden" name="BookingId" value="@item.BookingId">
                         <button type="submit">Details</button>
                     </form>
                 </td>
+                <td>
+                    <button onclick="location.href='@Url.Action("Delete", new { id = item.BookingId })'" >
+                        Remove Booking
+                    </button>
+                </td>
+               
                 
             </tr>
         }
