--- a/TravelExpertsMVC/Views/Shared/_Layout.cshtml
+++ b/TravelExpertsMVC/Views/Shared/_Layout.cshtml
@@ -62,6 +62,12 @@
         </nav>
     </header>
     <div class="container">
+        @if (TempData["Message"] != null)
+        {
+            <div class="alert @(TempData["IsError"] != null ? "alert-danger": "alert-success") alert-dismissible p-2 text-center">
+                <h5>@TempData["Message"]</h5>
+            </div>
+        }
         <main role="main" class="pb-3">
             @RenderBody()
         </main>
