small text change

--- a/TravelExpertsMVC/Views/Shared/_Layout.cshtml
+++ b/TravelExpertsMVC/Views/Shared/_Layout.cshtml
@@ -49,10 +49,10 @@
                                 </a>
                             </li>
                             <li class="nav-item hover">
-                                <a class="nav-link text-dark @(controller == "TravelProduct" && action == "Bookings" ? "active" : "")" asp-controller="TravelProduct" asp-action="Bookings">Bookings</a>
+                                <a class="nav-link text-dark @(controller == "TravelProduct" && action == "Bookings" ? "active" : "")" asp-controller="TravelProduct" asp-action="Bookings">My Bookings</a>
                             </li>
                             <li class="nav-item hover">
-                                <a class="nav-link text-dark @(controller == "TravelProduct" && action == "BookPackage" ? "active" : "")" asp-controller="TravelProduct" asp-action="BookPackage">Book Package</a>
+                                <a class="nav-link text-dark @(controller == "TravelProduct" && action == "BookPackage" ? "active" : "")" asp-controller="TravelProduct" asp-action="BookPackage">Book Packages</a>
                             </li>
                         }
                     </ul>
