--- a/TravelExpertsMVC/Views/TravelProduct/Details.cshtml
+++ b/TravelExpertsMVC/Views/TravelProduct/Details.cshtml
@@ -35,7 +35,7 @@
                 Base Price @*BasePrice*@
             </th>
             <th>
-                Agency Commision@*AgencyCommission*@
+                Agency Commission@*AgencyCommission*@
             </th>
             <th>
                 Fees @*FeeId*@
