--- a/TravelExpertsMVC/Views/Account/Login.cshtml
+++ b/TravelExpertsMVC/Views/Account/Login.cshtml
@@ -15,7 +15,7 @@
             <input type="text" asp-for="Password" class="form-control" />
             <span asp-validation-for="Password" class="text-danger"></span>
           </div>
-        <input type="submit" value="Login" class="btn btn-primary" />
+        <input type="submit" value="Login" class="btn btn-primary pkg-button" />
     </form>
 </div>
 @section Scripts {
