--- a/TravelExpertsMVC/Views/TravelProduct/BookPackage.cshtml
+++ b/TravelExpertsMVC/Views/TravelProduct/BookPackage.cshtml
@@ -5,7 +5,7 @@
     
 }
 <div class="container">
-    <h1>Book Package</h1>
+    <h1 class="mt-5">Book Package</h1>
     <hr />
     <div class="row">
         <div class="col-md-4">
@@ -14,12 +14,12 @@
                 <input type="hidden" asp-for="CustomerId" value="@ViewBag.CustomerId" />
                 <input type="hidden" asp-for="BookingNo" value="@ViewBag.RandomGen" />
                 <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-                <div class="form-group">
+                <div class="form-group mb-3">
                     <label asp-for="PackageId" class="control-label">Package</label>
                     <select asp-for="PackageId" asp-items="@ViewBag.Packages" class="form-control"></select>
                     <span asp-validation-for="PackageId" class="text-danger"></span>
                 </div>
-                <div class="form-group">
+                <div class="form-group mb-3">
                     <label asp-for="TravelerCount" class="control-label">Number of Travellers</label>
                     <select asp-for="TravelerCount" class="form-control">
                         @for (int i = 1; i <= 12; i++)
@@ -29,7 +29,7 @@
                     </select>
                     <span asp-validation-for="TravelerCount" class="text-danger"></span>
                 </div>
-                <div class="form-group">
+                <div class="form-group mb-3">
                     <label asp-for="TripTypeId" class="control-label">Trip Type</label>
                     <select asp-for="TripTypeId" class="form-control">
                         <option value="B">Business</option>
@@ -38,8 +38,8 @@
                     </select>
                     <span asp-validation-for="TripTypeId" class="text-danger"></span>
                 </div>
-                <div class="form-group mt-3">
-                    <input type="submit" value="Book Package" class="btn btn-primary" />
+                <div class="form-group">
+                    <input type="submit" value="Book Package" class="btn btn-primary pkg-button" />
                 </div>
             </form>
         </div>
@@ -53,7 +53,7 @@
                         <th>Destination</th>
                         <th>Description</th>
                         <th>Price</th>
-                        <th>Agency Commission</th>
+                        <th>Commission</th>
                     </tr>
                 </thead>
                 <tbody>
